apps/fireflyiii/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-db
  namespace: firefly-iii
spec:
  ports:
    - port: 5432
  selector:
    app: firefly-iii-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-db
  namespace: firefly-iii
  labels:
    app: firefly-iii-db
spec:
  selector:
    matchLabels:
      app: firefly-iii-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii-db
    spec:
      containers:
      - image: docker.io/library/postgres:15
        name: db
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
        - name: db-persistent-storage
          mountPath: /data/pgdata/
      volumes:
      - name: db-persistent-storage
        persistentVolumeClaim:
          claimName: db-pv-claim
