apps/fireflyiii/firefly-iii-importer.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-importer
  namespace: firefly-iii

spec:
  ports:
    - port: 8080
  selector:
    app: firefly-iii-importer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-importer
  namespace: firefly-iii
  labels:
    app: firefly-iii-importer
spec:
  selector:
    matchLabels:
      app: firefly-iii-importer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii-importer
    spec:
      containers:
      - image: fireflyiii/data-importer:latest
        name: firefly-iii-importer
        ports:
        - containerPort: 8080
          name: firefly-iii
        imagePullPolicy: Always
