apps/fireflyiii/firefly-iii.yaml
# Service to expose Firefly III on an available port in Kubernetes cluster
# Assigned port can be seen with `kubectl get services firefly-iii`
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  ports:
    - port: 8080
      name: firefly-iii
  selector:
    app: firefly-iii

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: firefly-iii
  labels:
    app: firefly-iii
spec:
  selector:
    matchLabels:
      app: firefly-iii
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
      - image: fireflyiii/core
        name: firefly-iii
        ports:
        - containerPort: 8080
          name: firefly-iii
        volumeMounts:
        - mountPath: "/var/www/html/storage/upload"
          name: firefly-iii-upload 
        imagePullPolicy: Always
      volumes:
        - name: firefly-iii-upload
          persistentVolumeClaim:
            claimName: firefly-iii-upload-claim
