apps/fireflyiii/ingress-firefly-iii-importer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    name: firefly-iii-importer-ingress
spec:
  tls:
    - hosts:
      - fin.tnils.eu
      secretName: tls-cluster
  rules:
  - host: fin.tnils.eu
    http:
      paths:
      - path: /import
        pathType: Prefix
        backend:
          service:
            name: firefly-iii-importer
            port:
              number: 8080
