apps/fireflyiii/ingress-firefly-iii.yaml

---
###################################################
# Ingress
###################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
  name: firefly-iii-ingress
  namespace: firefly-iii
spec:
  rules:
  - host: cloud.tnils.eu
    http:
      paths:
      - backend:
          service:
            name: firefly-iii
            port:
              number: 8080
        path: /finances
        pathType: Prefix
tls:
  - hosts:
    - cloud.tnils.eu
    secretName: firefly-iii-tls
